--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.18.2",
     "mysql2": "^3.16.0",
     "pdfkit": "^0.17.2",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "stripe": "^20.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
